# ffmpeg-the-third

./: .gitignore  CHANGELOG.md  Cargo.lock.MSRV  Cargo.toml  README.md  UPDATE.md  build.rs
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  release.yml
examples/: chapters.rs  codec-info.rs  dump-frames.rs  metadata.rs  remux.rs  transcode-audio.rs  transcode-x264.rs  video-stream.rs
ffmpeg-sys-the-third/: Cargo.toml  README.md  build.rs  channel_layout_fixed.h
ffmpeg-sys-the-third/.github/workflows/: build.yml
ffmpeg-sys-the-third/src/: lib.rs
ffmpeg-sys-the-third/src/avutil/: channel_layout.rs  error.rs  mod.rs  pixfmt.rs  rational.rs  util.rs
ffmpeg-sys-third/: Cargo.toml
ffmpeg-sys-third/src/: lib.rs
ffmpeg-sys-third/src/avutil/: channel_layout.rs  rational.rs
src/: as_ptr.rs  iters.rs  lib.rs  macros.rs  utils.rs
src/codec/: audio.rs  audio_service.rs  capabilities.rs  codec.rs  compliance.rs  config.rs  context.rs  debug.rs  descriptor.rs  discard.rs  field_order.rs  flag.rs  id.rs  mod.rs  parameters.rs  picture.rs  profile.rs  profile_old.rs  props.rs  threading.rs  traits.rs
src/codec/decoder/: audio.rs  check.rs  conceal.rs  decoder.rs  flag.rs  mod.rs  opened.rs  slice.rs  video.rs
src/codec/encoder/: audio.rs  comparison.rs  decision.rs  mod.rs  motion_estimation.rs  prediction.rs  subtitle.rs  video.rs
src/codec/packet/: borrow.rs  flag.rs  packet.rs  side_data.rs
src/codec/parameters/: borrowed.rs  borrowed_mut.rs  common.rs  mod.rs  owned.rs
src/codec/subtitle/: flag.rs  mod.rs  rect.rs  rect_common.rs  rect_mut.rs
src/device/: extensions.rs  input.rs  mod.rs  output.rs
src/filter/: filter.rs  flag.rs  graph.rs  mod.rs  pad.rs
src/filter/context/: context.rs  sink.rs
src/format/: mod.rs
src/format/chapter/: chapter.rs  chapter_mut.rs  common.rs  mod.rs
src/format/context/: common.rs  destructor.rs  input.rs  mod.rs  output.rs
src/format/context/builder/: input.rs  mod.rs
src/format/format/: flag.rs  input.rs  iter.rs  mod.rs  new_iter.rs  output.rs
src/format/stream/: common.rs  disposition.rs  mod.rs  side_data.rs  stream.rs  stream_mut.rs
src/software/: mod.rs
src/software/resampling/: context.rs  dither.rs  engine.rs  extensions.rs  filter.rs  flag.rs  mod.rs
src/software/scaling/: color_space.rs  context.rs  extensions.rs  flag.rs  mod.rs  vector.rs
src/util/: channel_layout.rs  error.rs  interrupt.rs  media.rs  mod.rs  picture.rs  rational.rs
src/util/channel_layout/: channel.rs  channel_custom.rs  iter.rs  layout.rs  mask.rs  mod.rs  order.rs
src/util/chroma/: location.rs
src/util/color/: primaries.rs  range.rs  space.rs  transfer_characteristic.rs
src/util/dictionary/: impls.rs  iter.rs  owned.rs
src/util/format/: mod.rs  pixel.rs  sample.rs
src/util/format/pixel/: alpha_mode.rs  mod.rs
src/util/frame/: audio.rs  flag.rs  mod.rs  side_data.rs  video.rs
src/util/log/: flag.rs  level.rs  mod.rs
src/util/mathematics/: rounding.rs
src/util/option/: mod.rs  traits.rs
