[package]
name = "ffmpeg-the-third"
version = "1.1.2+ffmpeg-5.1.2"
build = "build.rs"

authors = ["meh. <meh@schizofreni.co>", "Zhiming Wang <i@zhimingwang.org>"]
license = "WTFPL"

description = "Safe FFmpeg wrapper (FFmpeg 4 compatible fork of the ffmpeg crate)"
documentation = "https://docs.rs/ffmpeg-the-third"
homepage = "https://github.com/shssoichiro/ffmpeg-the-third"
repository = "https://github.com/shssoichiro/ffmpeg-the-third"
readme = "README.md"
keywords = ["ffmpeg", "multimedia", "video", "audio"]
categories = ["multimedia"]

[features]
default = [
    "codec",
    "device",
    "filter",
    "format",
    "software-resampling",
    "software-scaling",
    "non-exhaustive-enums",
]

static = ["ffmpeg-sys-the-third/static"]
build = ["static", "ffmpeg-sys-the-third/build"]

# mark enums in generated bindings as #[non_exhaustive]
non-exhaustive-enums = ["ffmpeg-sys-the-third/non-exhaustive-enums"]

serialize = ["serde"]

# licensing
build-license-gpl = ["ffmpeg-sys-the-third/build-license-gpl"]
build-license-nonfree = ["ffmpeg-sys-the-third/build-license-nonfree"]
build-license-version3 = ["ffmpeg-sys-the-third/build-license-version3"]

# misc
build-pic = ["ffmpeg-sys-the-third/build-pic"]
build-zlib = ["ffmpeg-sys-the-third/build-zlib"]

# ssl
build-lib-gnutls = ["ffmpeg-sys-the-third/build-lib-gnutls"]
build-lib-openssl = ["ffmpeg-sys-the-third/build-lib-openssl"]

# filters
build-lib-fontconfig = ["ffmpeg-sys-the-third/build-lib-fontconfig"]
build-lib-frei0r = ["ffmpeg-sys-the-third/build-lib-frei0r"]
build-lib-ladspa = ["ffmpeg-sys-the-third/build-lib-ladspa"]
build-lib-ass = ["ffmpeg-sys-the-third/build-lib-ass"]
build-lib-freetype = ["ffmpeg-sys-the-third/build-lib-freetype"]
build-lib-freebidi = ["ffmpeg-sys-the-third/build-lib-freebidi"]
build-lib-opencv = ["ffmpeg-sys-the-third/build-lib-opencv"]
build-lib-vmaf = ["ffmpeg-sys-the-third/build-lib-vmaf"]

# encoders/decoders
build-lib-aacplus = ["ffmpeg-sys-the-third/build-lib-aacplus"]
build-lib-celt = ["ffmpeg-sys-the-third/build-lib-celt"]
build-lib-dav1d = ["ffmpeg-sys-the-third/build-lib-dav1d"]
build-lib-dcadec = ["ffmpeg-sys-the-third/build-lib-dcadec"]
build-lib-faac = ["ffmpeg-sys-the-third/build-lib-faac"]
build-lib-fdk-aac = ["ffmpeg-sys-the-third/build-lib-fdk-aac"]
build-lib-gsm = ["ffmpeg-sys-the-third/build-lib-gsm"]
build-lib-ilbc = ["ffmpeg-sys-the-third/build-lib-ilbc"]
build-lib-kvazaar = ["ffmpeg-sys-the-third/build-lib-kvazaar"]
build-lib-mp3lame = ["ffmpeg-sys-the-third/build-lib-mp3lame"]
build-lib-opencore-amrnb = ["ffmpeg-sys-the-third/build-lib-opencore-amrnb"]
build-lib-opencore-amrwb = ["ffmpeg-sys-the-third/build-lib-opencore-amrwb"]
build-lib-openh264 = ["ffmpeg-sys-the-third/build-lib-openh264"]
build-lib-openjpeg = ["ffmpeg-sys-the-third/build-lib-openjpeg"]
build-lib-opus = ["ffmpeg-sys-the-third/build-lib-opus"]
build-lib-schroedinger = ["ffmpeg-sys-the-third/build-lib-schroedinger"]
build-lib-shine = ["ffmpeg-sys-the-third/build-lib-shine"]
build-lib-snappy = ["ffmpeg-sys-the-third/build-lib-snappy"]
build-lib-speex = ["ffmpeg-sys-the-third/build-lib-speex"]
build-lib-stagefright-h264 = ["ffmpeg-sys-the-third/build-lib-stagefright-h264"]
build-lib-theora = ["ffmpeg-sys-the-third/build-lib-theora"]
build-lib-twolame = ["ffmpeg-sys-the-third/build-lib-twolame"]
build-lib-utvideo = ["ffmpeg-sys-the-third/build-lib-utvideo"]
build-lib-vo-aacenc = ["ffmpeg-sys-the-third/build-lib-vo-aacenc"]
build-lib-vo-amrwbenc = ["ffmpeg-sys-the-third/build-lib-vo-amrwbenc"]
build-lib-vorbis = ["ffmpeg-sys-the-third/build-lib-vorbis"]
build-lib-vpx = ["ffmpeg-sys-the-third/build-lib-vpx"]
build-lib-wavpack = ["ffmpeg-sys-the-third/build-lib-wavpack"]
build-lib-webp = ["ffmpeg-sys-the-third/build-lib-webp"]
build-lib-x264 = ["ffmpeg-sys-the-third/build-lib-x264"]
build-lib-x265 = ["ffmpeg-sys-the-third/build-lib-x265"]
build-lib-avs = ["ffmpeg-sys-the-third/build-lib-avs"]
build-lib-xvid = ["ffmpeg-sys-the-third/build-lib-xvid"]

# protocols
build-lib-smbclient = ["ffmpeg-sys-the-third/build-lib-smbclient"]
build-lib-ssh = ["ffmpeg-sys-the-third/build-lib-ssh"]

# components
codec = ["ffmpeg-sys-the-third/avcodec"]
device = ["ffmpeg-sys-the-third/avdevice", "format"]
filter = ["ffmpeg-sys-the-third/avfilter"]
format = ["ffmpeg-sys-the-third/avformat", "codec"]
resampling = ["ffmpeg-sys-the-third/avresample"]
postprocessing = ["ffmpeg-sys-the-third/postproc"]
software-resampling = ["ffmpeg-sys-the-third/swresample"]
software-scaling = ["ffmpeg-sys-the-third/swscale", "codec"]

# platforms
rpi = []

[dependencies]
libc = "0.2"
bitflags = "1.2"

[dependencies.image]
version = "0.24"
optional = true

[dependencies.ffmpeg-sys-the-third]
version = "1.0.0"
default-features = false

[dependencies.serde]
version = "1.0.152"
optional = true
features = ["derive"]
