[package]
name = "ffmpeg-sys-the-third"
version = "1.2.0+ffmpeg-6.1"
build = "build.rs"
links = "ffmpeg"
edition = "2021"

authors = [
    "meh. <meh@schizofreni.co>",
    "Zhiming Wang <i@zhimingwang.org>",
    "Josh Holmer <jholmer.in@gmail.com>",
]
license = "WTFPL"

description = "FFI bindings to FFmpeg"
repository = "https://github.com/shssoichiro/ffmpeg-the-third"
keywords = ["audio", "video"]

# When changing MSRV: Also update build.yml and README.md
rust-version = "1.61.0"

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
bindgen = { version = "0.64", default-features = false, features = ["runtime"] }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[features]
default = [
    "avcodec",
    "avdevice",
    "avfilter",
    "avformat",
    "swresample",
    "swscale",
    "non-exhaustive-enums",
]

static = []
build = ["static"]

# mark enums in generated bindings as #[non_exhaustive]
non-exhaustive-enums = []

# licensing
build-license-gpl = ["build"]
build-license-nonfree = ["build"]
build-license-version3 = ["build"]

# misc
build-drm = ["build"]
build-nvenc = ["build"]
build-pic = ["build"]
build-zlib = ["build"]

# ssl
build-lib-gnutls = ["build"]
build-lib-openssl = ["build"]

# filters
build-lib-fontconfig = ["build"]
build-lib-frei0r = ["build"]
build-lib-ladspa = ["build"]
build-lib-ass = ["build"]
build-lib-freetype = ["build"]
build-lib-freebidi = ["build"]
build-lib-opencv = ["build"]
build-lib-vmaf = ["build"]

# encoders/decoders
build-lib-aacplus = ["build"]
build-lib-celt = ["build"]
build-lib-dav1d = ["build"]
build-lib-dcadec = ["build"]
build-lib-faac = ["build"]
build-lib-fdk-aac = ["build"]
build-lib-gsm = ["build"]
build-lib-ilbc = ["build"]
build-lib-kvazaar = ["build"]
build-lib-mp3lame = ["build"]
build-lib-opencore-amrnb = ["build"]
build-lib-opencore-amrwb = ["build"]
build-lib-openh264 = ["build"]
build-lib-openjpeg = ["build"]
build-lib-opus = ["build"]
build-lib-schroedinger = ["build"]
build-lib-shine = ["build"]
build-lib-snappy = ["build"]
build-lib-speex = ["build"]
build-lib-stagefright-h264 = ["build"]
build-lib-theora = ["build"]
build-lib-twolame = ["build"]
build-lib-utvideo = ["build"]
build-lib-vo-aacenc = ["build"]
build-lib-vo-amrwbenc = ["build"]
build-lib-vorbis = ["build"]
build-lib-vpx = ["build"]
build-lib-wavpack = ["build"]
build-lib-webp = ["build"]
build-lib-x264 = ["build"]
build-lib-x265 = ["build"]
build-lib-avs = ["build"]
build-lib-xvid = ["build"]

# protocols
build-lib-smbclient = ["build"]
build-lib-ssh = ["build"]

# components
avcodec = []
avdevice = ["avformat"]
avfilter = []
avformat = ["avcodec"]
avresample = []
postproc = []
swresample = []
swscale = []
