[package]
name = "ffmpeg-sys-the-third"
version = "2.1.0+ffmpeg-7.1"
links = "ffmpeg"
edition = "2021"

authors = [
    "meh. <meh@schizofreni.co>",
    "Zhiming Wang <i@zhimingwang.org>",
    "Josh Holmer <jholmer.in@gmail.com>",
]
license = "WTFPL"

include = ["LICENSE", "build.rs", "src/"]

description = "FFI bindings to FFmpeg"
repository = "https://github.com/shssoichiro/ffmpeg-the-third"
keywords = ["audio", "video"]
categories = ["multimedia", "external-ffi-bindings"]

# When changing MSRV: Also update build.yml and README.md
rust-version = "1.65.0"

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
clang = { version = "2.0.0", features = ["clang_3_9", "runtime"] }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[features]
default = [
    "avcodec",
    "avdevice",
    "avfilter",
    "avformat",
    "swresample",
    "swscale",
    "non-exhaustive-enums",
]

static = []

# mark enums in generated bindings as #[non_exhaustive]
non-exhaustive-enums = []

# components
avcodec = []
avdevice = ["avformat"]
avfilter = []
avformat = ["avcodec"]
postproc = []
swresample = []
swscale = []

#
# Build-related features
#

# build FFmpeg when building this crate
build = ["static"]

# licensing
build-license-gpl = ["build"]
build-license-nonfree = ["build"]
build-license-version3 = ["build"]

# misc
build-drm = ["build"]
build-nvenc = ["build"]
build-pic = ["build"]
build-zlib = ["build"]

# ssl
build-lib-gnutls = ["build"]
build-lib-openssl = ["build"]

# filters
build-lib-fontconfig = ["build"]
build-lib-frei0r = ["build"]
build-lib-ladspa = ["build"]
build-lib-ass = ["build"]
build-lib-freetype = ["build"]
build-lib-freebidi = ["build"]
build-lib-opencv = ["build"]
build-lib-vmaf = ["build"]

# encoders/decoders
build-lib-aacplus = ["build"]
build-lib-celt = ["build"]
build-lib-codec2 = ["build"]
build-lib-dav1d = ["build"]
build-lib-davs2 = ["build"]
build-lib-dcadec = ["build"]
build-lib-faac = ["build"]
build-lib-fdk-aac = ["build"]
build-lib-gsm = ["build"]
build-lib-ilbc = ["build"]
build-lib-jxl = ["build"]
build-lib-kvazaar = ["build"]
build-lib-lc3 = ["build"]
build-lib-lcevc-dec = ["build"]
build-lib-mp3lame = ["build"]
build-lib-opencore-amrnb = ["build"]
build-lib-opencore-amrwb = ["build"]
build-lib-openh264 = ["build"]
build-lib-openjpeg = ["build"]
build-lib-opus = ["build"]
build-lib-rav1e = ["build"]
build-lib-schroedinger = ["build"]
build-lib-shine = ["build"]
build-lib-snappy = ["build"]
build-lib-speex = ["build"]
build-lib-stagefright-h264 = ["build"]
build-lib-svtav1 = ["build"]
build-lib-theora = ["build"]
build-lib-twolame = ["build"]
build-lib-uavs3d = ["build"]
build-lib-utvideo = ["build"]
build-lib-vo-aacenc = ["build"]
build-lib-vo-amrwbenc = ["build"]
build-lib-vorbis = ["build"]
build-lib-vpx = ["build"]
build-lib-vvenc = ["build"]
build-lib-wavpack = ["build"]
build-lib-webp = ["build"]
build-lib-x264 = ["build"]
build-lib-x265 = ["build"]
build-lib-xeve = ["build"]
build-lib-xevd = ["build"]
build-lib-xavs = ["build"]
build-lib-xavs2 = ["build"]
build-lib-avs = ["build"]
build-lib-xvid = ["build"]

# protocols
build-lib-smbclient = ["build"]
build-lib-ssh = ["build"]
